Restyle terms acceptance checkbox

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  agreed_to_terms: I have read and agree to the terms and conditions of membership
   activerecord:
     models:
       member: Member
