--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,4 +23,14 @@ en:
         purchase_order_number: "Purchase Order Number"
         password: "Password"
         password_confirmation: "Confirm Password"
-        
+  activemodel:
+    models:
+      contact_request: Contact Request
+    attributes:
+      contact_request:
+        person_name: "Name"
+        person_affiliation: "Organisation"
+        person_email: "Email Address"
+        person_telephone: "Telephone Number"
+        person_job_title: "Job Title"
+        comment_text: "Your Interest"
