--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,7 @@ en:
         address_region: "Region"
         address_country: "Country"
         address_postcode: "Postcode"
-        tax_number: "Tax Number"
+        tax_number: "Tax Number (if not in UK)"
         purchase_order_number: "Purchase Order Number"
         password: "Password"
         password_confirmation: "Confirm Password"
