--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,7 +17,7 @@ en:
         address_locality: "City"
         address_region: "Region"
         address_country: "Country"
-        address_postcode: "Postcode"
+        postal_code: "Postcode"
         organisation_vat_id: "VAT Number (if not in UK)"
         purchase_order_number: "Purchase Order Number"
         password: "Password"
