--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,8 @@
 
 en:
   agreed_to_terms: I have read and agree to the terms and conditions of membership
+  formats:
+    json: JSON
   activerecord:
     models:
       member: Member
