--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@
 
 en:
   agreed_to_terms: I have read and agree to the terms and conditions of membership
+  email_signoff: Georgia
   formats:
     json: JSON
   activerecord:
