--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,7 +18,7 @@ en:
       unconfirmed: "You have to confirm your account before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Your ODI membership account details"
+        subject: "Welcome to the ODI community!"
       reset_password_instructions:
         subject: "Open Data Institute: Password reset instructions"
       unlock_instructions:
