Ensure individual agrees to data protection policy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,12 @@ en:
   formats:
     json: JSON
   activerecord:
+    errors:
+      models:
+        member:
+          attributes:
+            agreed_to_datapolicy:
+              accepted: "Please read and agree to our data protection policy"
     models:
       member: Member
       organization: Organisation
@@ -36,6 +42,7 @@ en:
         card_validation_code: CVC
         card_expiry_month: Expiry month
         card_expiry_year: Expiry year
+        agreed_to_datapolicy: ""
       organization:
         name: "Organisation Name"
         url: "Homepage"
