--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
       organization: Organisation
     attributes:
       member:
+        login: "Member ID or email address"
         membership_number: "Member ID"
         product_name: "Membership level"
         email: "Email address"
