Make failure email more user friendly
The member creation failure email is now more user friendly as it lists
all of the possible issues with the information provided (or not) in
Capsule CRM.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,4 +67,4 @@ en:
       subject: "Welcome to the ODI network!"
   error_mailer:
     membership_number_generation_failed:
-      subject: "Membership Number Error"
+      subject: "Membership creation failure"
