--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,8 +26,8 @@ en:
         organization_type: "Organisation type"
         organization_sector: "Industry sector"
         telephone: "Contact number"
-        street_address: "Address"
-        address_locality: "Locality"
+        street_address: "Address line 1"
+        address_locality: "Address line 2"
         address_region: "City"
         address_country: "Country"
         postal_code: "Postcode"
@@ -40,8 +40,8 @@ en:
         card_expiry_month: Expiry month
         card_expiry_year: Expiry year
         university_email: "Email address"
-        university_street_address: "Address"
-        university_address_locality: "Locality"
+        university_street_address: "Address 1"
+        university_address_locality: "Address line 2"
         university_address_region: "City"
         university_address_country: "Country"
         university_postal_code: "Postcode"
@@ -52,7 +52,7 @@ en:
         university_course_name: "Course name"
         university_course_start_date: "Course start date"
         university_course_end_date: "Course end date"
-        twitter: "Twitter"
+        twitter: "Twitter handle"
         dob: "Date of birth"
       organization:
         name: "Organisation name"
@@ -62,7 +62,7 @@ en:
         cached_contact_name: "Contact person"
         cached_contact_phone: "Contact telephone"
         cached_contact_email: "Contact email"
-        cached_twitter: "Twitter"
+        cached_twitter: "Twitter handle"
         cached_facebook: "Facebook"
         cached_linkedin: "LinkedIn"
         cached_tagline: "Tagline"
