--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
         telephone: "Contact number"
         street_address: "Address line 1"
         address_locality: "Address line 2"
-        address_region: "Town or City"
+        address_region: "Town or city"
         address_country: "Country"
         postal_code: "Postcode"
         organization_company_number: "Company / Charity number"
@@ -42,7 +42,7 @@ en:
         university_email: "Email address"
         university_street_address: "Address line 1"
         university_address_locality: "Address line 2"
-        university_address_region: "Town or City"
+        university_address_region: "Town or city"
         university_address_country: "Country"
         university_postal_code: "Postcode"
         university_name: "University/college name"
