more concise naming of fields

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,18 +31,18 @@ en:
         organization_company_number: "Company / Charity number"
         password: "Password"
         password_confirmation: "Confirm password"
-        twitter: "Twitter handle"
+        twitter: "Individual twitter handle"
         organization_name: "Organisation name"
-        organization_url: "Organization homepage"
-        organization_description: "Organization description"
-        organization_logo: "Organization logo"
-        organization_contact_name: "Organization contact person"
-        organization_contact_phone: "Organization contact telephone"
-        organization_contact_email: "Organization contact email"
-        organization_twitter: "Organization Twitter handle"
-        organization_facebook: "Organization Facebook"
-        organization_linkedin: "Organization LinkedIn"
-        organization_tagline: "Organization tagline"
+        organization_url: "Homepage"
+        organization_description: "Description"
+        organization_logo: "Logo"
+        organization_contact_name: "Sales contact"
+        organization_contact_phone: "Sales telephone"
+        organization_contact_email: "Sales email"
+        organization_twitter: "Twitter handle"
+        organization_facebook: "Facebook"
+        organization_linkedin: "LinkedIn"
+        organization_tagline: "tagline"
   activemodel:
     models:
       contact_request: Contact Request
